--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react": "^19.1.0",
     "react-bits": "^1.0.5",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-native-web": "^0.20.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
